<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:animateLayoutChanges="true"
    android:background="@color/colorPrimary"
    tools:context=".activity.MovieInfoActivity">

    <ScrollView
        android:id="@+id/scrollView2"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        tools:layout_editor_absoluteX="-16dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <androidx.viewpager2.widget.ViewPager2
                android:id="@+id/sliderViewPager"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_160sdp"
                android:orientation="horizontal"

                app:layout_constraintTop_toTopOf="parent" />

            <View
                android:id="@+id/viewFadingEdge"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_40sdp"
                android:background="@drawable/background_fading_edge"

                app:layout_constraintBottom_toBottomOf="@+id/sliderViewPager" />

            <LinearLayout
                android:id="@+id/layoutSliderIndicators"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:gravity="end|center_vertical"
                android:orientation="horizontal"
                android:padding="@dimen/_8sdp"
                android:visibility="gone"
                app:layout_constraintBottom_toBottomOf="@+id/viewFadingEdge"
                app:layout_constraintEnd_toEndOf="parent" />

            <ImageView
                android:id="@+id/imageBack"
                android:layout_width="@dimen/_25sdp"
                android:layout_height="@dimen/_25sdp"
                android:layout_marginStart="@dimen/_10sdp"
                android:background="@drawable/background_back_button"
                android:contentDescription="@string/app_name"
                android:padding="@dimen/_3sdp"
                android:src="@drawable/ic_back"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:tint="@color/colorTextIcons" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingHorizontal="@dimen/activity_horizontal_margin"
                android:paddingVertical="@dimen/activity_vertical_margin"
                app:layout_constraintTop_toBottomOf="@+id/sliderViewPager">

                <com.makeramen.roundedimageview.RoundedImageView
                    android:id="@+id/imageMoviePoster"
                    android:layout_width="@dimen/_100sdp"
                    android:layout_height="@dimen/_150sdp"
                    android:layout_marginStart="@dimen/_10sdp"
                    android:layout_marginEnd="20dp"
                    android:scaleType="centerCrop"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:riv_corner_radius="@dimen/_6sdp" />

                <TextView
                    android:id="@+id/textTitle"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="15dp"
                    android:layout_marginEnd="@dimen/_8sdp"
                    android:ellipsize="end"
                    android:fontFamily="@font/ngb"
                    android:includeFontPadding="false"
                    android:maxLines="1"
                    android:textColor="@color/colorTextIcons"
                    android:textSize="@dimen/_20ssp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@id/imageMoviePoster"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/textEngTitle"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_4sdp"
                    android:ellipsize="end"
                    android:fontFamily="@font/ng"
                    android:includeFontPadding="false"
                    android:maxLines="1"
                    android:textColor="@color/colorTextIcons"
                    android:textSize="@dimen/_12ssp"
                    app:layout_constraintEnd_toEndOf="@+id/textTitle"
                    app:layout_constraintStart_toStartOf="@+id/textTitle"
                    app:layout_constraintTop_toBottomOf="@id/textTitle" />

                <LinearLayout
                    android:id="@+id/linear1"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:weightSum="1"
                    app:layout_constraintEnd_toEndOf="@+id/textTitle"
                    app:layout_constraintStart_toStartOf="@+id/textTitle"
                    app:layout_constraintTop_toBottomOf="@id/textEngTitle">

                    <RatingBar
                        android:id="@+id/ratingBar"
                        style="@style/Widget.AppCompat.RatingBar.Small"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/_4sdp"
                        android:layout_marginRight="@dimen/_4sdp"
                        android:layout_marginBottom="@dimen/_6sdp"
                        android:isIndicator="true"
                        android:numStars="5"
                        android:progressTint="#FFAF1A1A"
                        tools:rating="4.5" />

                    <TextView
                        android:id="@+id/textRatingBarNum"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:textColor="#FFAF1A1A"
                        android:textSize="@dimen/_12ssp" />
                </LinearLayout>

                <TextView
                    android:id="@+id/textGenre"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_4sdp"
                    android:ellipsize="end"
                    android:fontFamily="@font/ng"
                    android:includeFontPadding="false"
                    android:maxLines="1"
                    android:textColor="@color/colorTextOther"
                    android:textSize="@dimen/_12ssp"
                    app:layout_constraintEnd_toEndOf="@+id/linear1"
                    app:layout_constraintStart_toStartOf="@+id/linear1"
                    app:layout_constraintTop_toBottomOf="@id/linear1" />

                <LinearLayout
                    android:id="@+id/linear2"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:weightSum="1"
                    app:layout_constraintEnd_toEndOf="@+id/textGenre"
                    app:layout_constraintStart_toStartOf="@+id/textGenre"
                    app:layout_constraintTop_toBottomOf="@id/textGenre">

                    <TextView
                        android:id="@+id/textCountry"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/_4sdp"
                        android:ellipsize="end"
                        android:fontFamily="@font/ng"
                        android:includeFontPadding="false"
                        android:maxLines="1"
                        android:textColor="@color/colorTextIcons"
                        android:textSize="@dimen/_12ssp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/_4sdp"
                        android:ellipsize="end"
                        android:fontFamily="@font/ng"
                        android:includeFontPadding="false"
                        android:maxLines="1"
                        android:text="@string/bar"
                        android:textColor="@color/colorTextIcons"
                        android:textSize="@dimen/_12ssp" />

                    <TextView
                        android:id="@+id/textAgeLimit"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/_4sdp"
                        android:ellipsize="end"
                        android:fontFamily="@font/ng"
                        android:includeFontPadding="false"
                        android:maxLines="1"
                        android:textColor="@color/colorTextIcons"
                        android:textSize="@dimen/_12ssp" />

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/linear3"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:weightSum="1"
                    app:layout_constraintEnd_toEndOf="@+id/linear2"
                    app:layout_constraintStart_toStartOf="@+id/linear2"
                    app:layout_constraintTop_toBottomOf="@id/linear2">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/_4sdp"
                        android:ellipsize="end"
                        android:fontFamily="@font/ng"
                        android:includeFontPadding="false"
                        android:maxLines="1"
                        android:text="@string/director"
                        android:textColor="@color/colorTextIcons"
                        android:textSize="@dimen/_12ssp" />

                    <TextView
                        android:id="@+id/textDirector"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/_4sdp"
                        android:ellipsize="end"
                        android:fontFamily="@font/ng"
                        android:includeFontPadding="false"
                        android:maxLines="1"
                        android:textColor="@color/colorTextIcons"
                        android:textSize="@dimen/_12ssp" />

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/linear4"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:weightSum="1"
                    app:layout_constraintEnd_toEndOf="@+id/linear3"
                    app:layout_constraintStart_toStartOf="@+id/linear3"
                    app:layout_constraintTop_toBottomOf="@id/linear3">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/_4sdp"
                        android:ellipsize="end"
                        android:fontFamily="@font/ng"
                        android:includeFontPadding="false"
                        android:maxLines="1"
                        android:text="@string/actor"
                        android:textColor="@color/colorTextIcons"
                        android:textSize="@dimen/_12ssp" />

                    <TextView
                        android:id="@+id/textActor"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/_4sdp"
                        android:ellipsize="end"
                        android:fontFamily="@font/ng"
                        android:includeFontPadding="false"
                        android:maxLines="3"
                        android:textColor="@color/colorTextIcons"
                        android:textSize="@dimen/_12ssp" />
                </LinearLayout>


                <TextView
                    android:id="@+id/textReleaseDate"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_4sdp"
                    android:ellipsize="end"
                    android:fontFamily="@font/ng"
                    android:includeFontPadding="false"
                    android:maxLines="1"
                    android:textColor="@color/colorTextIcons"
                    android:textSize="@dimen/_12ssp"
                    app:layout_constraintEnd_toEndOf="@+id/linear4"
                    app:layout_constraintStart_toStartOf="@+id/linear4"
                    app:layout_constraintTop_toBottomOf="@id/linear4" />


                <TextView
                    android:id="@+id/textSummary"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_12ssp"
                    android:ellipsize="end"
                    android:fontFamily="@font/ng"
                    android:includeFontPadding="false"
                    android:lineSpacingExtra="@dimen/_2sdp"
                    android:maxLines="4"
                    android:textColor="@color/colorTextIcons"
                    android:textSize="@dimen/_11ssp"
                    app:layout_constraintTop_toBottomOf="@+id/textReleaseDate"
                    tools:layout_editor_absoluteX="10dp" />

                <TextView
                    android:id="@+id/textReadMore"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginVertical="20dp"
                    android:fontFamily="@font/ng"
                    android:gravity="center"
                    android:includeFontPadding="false"
                    android:text="@string/read_more"
                    android:textColor="@color/colorTextSecondary"
                    android:textSize="@dimen/_12ssp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="@id/textSummary"
                    app:layout_constraintTop_toBottomOf="@id/textSummary" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_marginTop="20dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/textReadMore">

                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/recyclerView"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/_100sdp"
                        android:layout_marginTop="10dp"
                        tools:listitem="@layout/item_container_time" />
                </LinearLayout>
            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>